--- a/app/views/admin/api_users/index.html.erb
+++ b/app/views/admin/api_users/index.html.erb
@@ -10,14 +10,17 @@
             <table class="table table-hover table-bordered table-condensed">
                 <thead>
                     <tr>
-                        <th class="col-xs-2">
+                        <th class="col-xs-3">
                             <%= sort_link(@q, 'username') %>
                         </th>
-                        <th class="col-xs-2">
+                        <th class="col-xs-3">
                             <%= sort_link(@q, 'registrar_name', Registrar.model_name.human) %>
                         </th>
-                        <th class="col-xs-2">
+                        <th class="col-xs-3">
                             <%= sort_link(@q, 'active', ApiUser.human_attribute_name(:active)) %>
+                        </th>
+                        <th class="col-xs-1">
+                            Test status
                         </th>
                     </tr>
                 </thead>
