--- a/app/views/admin/api_users/show.html.erb
+++ b/app/views/admin/api_users/show.html.erb
@@ -6,12 +6,12 @@
 </ol>
 
 <div class="page-header">
-    <div class="row">
+    <div class="row" style="display: flex; flex-direction: row; align-items: baseline;">
         <div class="col-sm-8">
             <h1><%= @api_user.username %></h1>
         </div>
 
-        <div class="col-sm-4 text-right">
+        <div class="col-sm-4 text-right" style="display: flex; flex-direction: row; align-items: baseline; justify-content: space-evenly;">
             <%= link_to t('.edit_btn'), edit_admin_registrar_api_user_path(@api_user.registrar,
                                                                            @api_user),
                         class: 'btn btn-primary' %>
@@ -20,6 +20,16 @@
                         method: :delete,
                         data: { confirm: t('.delete_btn_confirm') },
                         class: 'btn btn-default' %>
+
+            <% if !@api_user.accredited? || @api_user.accreditation_expired? %>
+                <%= button_to t(:set_test_btn),
+                              { controller: 'api_users', action: 'set_test_date_to_api_user', user_api_id: @api_user.id },
+                              { method: :post, class: 'btn btn-primary'} %>
+            <% else %>
+                <%= button_to t(:remove_test_btn),
+                              { controller: 'api_users', action: 'remove_test_date_to_api_user', user_api_id: @api_user.id },
+                              { method: :post, class: 'btn btn-danger'} %>
+            <% end %>
         </div>
     </div>
 </div>
