--- a/app/views/admin/registrars/show/_api_users.html.erb
+++ b/app/views/admin/registrars/show/_api_users.html.erb
@@ -8,6 +8,7 @@
             <tr>
                 <th class="col-xs-6"><%= ApiUser.human_attribute_name :username %></th>
                 <th class="col-xs-6"><%= ApiUser.human_attribute_name :active %></th>
+                <th class="col-xs-6">Test Results</th>
             </tr>
         </thead>
 
@@ -16,6 +17,18 @@
                 <tr>
                     <td><%= link_to api_user, admin_registrar_api_user_path(api_user.registrar, api_user) %></td>
                     <td><%= api_user.active %></td>
+                    <td>
+
+                        <% if !api_user.accredited? || api_user.accreditation_expired? %>
+                            <%= button_to t('.set_test_btn'),
+                                          { controller: 'api_users', action: 'set_test_date_to_api_user', user_api_id: api_user.id },
+                                          { method: :post, class: 'btn btn-primary'} %>
+                        <% else %>
+                            <%= button_to t('.remove_test_btn'),
+                                          { controller: 'api_users', action: 'remove_test_date_to_api_user', user_api_id: api_user.id },
+                                          { method: :post, class: 'btn btn-danger'} %>
+                        <% end %>
+                    </td>
                 </tr>
             <% end %>
         </tbody>
