--- a/app/views/registrar/domains/_search_form.html.erb
+++ b/app/views/registrar/domains/_search_form.html.erb
@@ -44,7 +44,7 @@
 
         <div class="col-md-3">
             <div class="form-group">
-                <%= f.label :valid_to_from, for: nil %>
+                <%= f.label :valid_to_gteq, for: nil %>
                 <%= f.search_field :valid_to_gteq, value: search_params[:valid_to_gteq],
                                    class: 'form-control js-datepicker',
                                    placeholder: t(:valid_to_from) %>
@@ -53,7 +53,7 @@
 
         <div class="col-md-3">
             <div class="form-group">
-                <%= f.label :valid_to_until, for: nil %>
+                <%= f.label :valid_to_lteq, for: nil %>
                 <%= f.search_field :valid_to_lteq, value: search_params[:valid_to_lteq],
                                    class: 'form-control js-datepicker',
                                    placeholder: t(:valid_to_until) %>
